lang.java.statics.test/tests/positive/packages/classes-visible-in-compilation-units-of-same-nested-package.yes.javtest
STATIX ok
JAVAC  ok

[p] {
    [q] {

        [A]
        package p.q;
        public class A {
            public B b;
        }

        [B]
        package p.q;
        public class B {
            public A a;
        }

    }
}
