lang.java.statics.test/tests/negative/packages/class-in-parent-package-not-visible-in-compilation-unit-of-nested-package.no.javtest
STATIX fail java\.names\.lexical-type-name
JAVAC  fail cannot find symbol

[p] {

    [A]
    package p;
    public class A {}

    [q] {

        [B]
        package p.q;
        public class B {
            public A a;
        }

    }
}
